<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="py.com.electoralvoteapp.activities.ChargeDataActivity">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/candidates_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/total_votes_cardview"
        android:layout_margin="@dimen/default_padding" />


    <android.support.v7.widget.CardView
        android:id="@+id/total_votes_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonbar"
        android:layout_margin="@dimen/default_padding"
        app:cardCornerRadius="@dimen/default_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_photo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_marginRight="@dimen/default_padding"
                android:text="@string/label_total_votes"
                android:textColor="@color/primaryText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_votes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp" />
        </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.ButtonBarLayout
        android:id="@+id/buttonbar"
        style="@style/MyButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/label_cancel"
            android:textColor="@color/colorIcons"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/label_send"
            android:textColor="@color/colorIcons"
            android:textStyle="bold" />
    </android.support.v7.widget.ButtonBarLayout>

</RelativeLayout>
